Refactoring persistence classes
- Created a common ncmppersistence pkg inside ncmp service "api/impl" pkg".
- Move "inventery" into "api/impl" pkg.
- Created common class named as "NcmpPersistence" inside
  "ncmppersistence" pkg.
- Move all the commin constants and methods into "NcmpPersistence".
- SubscriptionPersistence and InventoryPersistence extends
  "NcmpPersistence".
- Find and replace all the constants of NCMP.

Issue-ID: CPS-1883
Signed-off-by: sourabh_sourabh <sourabh.sourabh@est.tech>
Change-Id: Id3e678109766d680589fa7aab965ea251a55f075
Signed-off-by: sourabh_sourabh <sourabh.sourabh@est.tech>